SERVER-6956 Chunk::splitIfShould does not acquire the distributed balance lock when moving chunks

Convert verify into an errmsg to make it more friendly with the debug build test suite. Also fixed
MigrateStatusHolder so it will not accidentally cleanup migrateFromStatus logically owned by another
thread.